--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,13 +37,14 @@ dependencies:
   supabase_flutter: ^2.0.0
   logger: ^2.5.0
   intl: ^0.20.2
-  file_picker: ^8.3.1
+  file_picker: ^10.3.7
   flutter_bloc: ^9.0.0
   bloc: ^9.0.0
   meta: ^1.15.0
   google_nav_bar: ^5.0.7
   line_icons: ^2.0.1
-  permission_handler: ^11.3.1
+  permission_handler: ^12.0.1
+  razorpay_flutter: ^1.4.0
 
 dev_dependencies:
   flutter_test:
@@ -54,7 +55,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
