--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   line_icons: ^2.0.1
   permission_handler: ^12.0.1
   razorpay_flutter: ^1.4.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
